[gd_scene load_steps=2 format=2]

[ext_resource path="res://quest.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
questListPath = NodePath("ScrollContainer/Quests")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 431.0
margin_bottom = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quests" type="VBoxContainer" parent="ScrollContainer"]
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quest_Delete" type="PopupMenu" parent="."]
margin_right = 107.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="questHideYes" type="Button" parent="Quest_Delete"]
margin_left = 7.91904
margin_top = 37.448
margin_right = 47.919
margin_bottom = 75.448
text = "yes"

[node name="questHideNo" type="Button" parent="Quest_Delete"]
margin_left = 56.4361
margin_top = 39.2158
margin_right = 96.4361
margin_bottom = 77.2158
text = "no"

[node name="Label" type="Label" parent="Quest_Delete"]
margin_left = 9.03194
margin_top = 4.51597
margin_right = 95.0319
margin_bottom = 33.516
text = "delete?"
align = 1
valign = 1

[node name="Quest_Waypoint" type="PopupMenu" parent="."]
margin_right = 107.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="questHideYes" type="Button" parent="Quest_Waypoint"]
margin_left = 7.91904
margin_top = 37.448
margin_right = 47.919
margin_bottom = 75.448
text = "yes"

[node name="questHideNo" type="Button" parent="Quest_Waypoint"]
margin_left = 56.4361
margin_top = 39.2158
margin_right = 96.4361
margin_bottom = 77.2158
text = "no"

[node name="Label" type="Label" parent="Quest_Waypoint"]
margin_left = 9.03194
margin_top = 4.51597
margin_right = 95.0319
margin_bottom = 33.516
text = "delete?"
align = 1
valign = 1

[node name="debug" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="headerData" type="Control" parent="debug"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="debug/headerData"]
margin_left = 466.252
margin_top = 201.304
margin_right = 568.252
margin_bottom = 248.304
text = "header"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="debug/headerData"]
margin_left = 583.0
margin_top = 217.0
margin_right = 814.0
margin_bottom = 241.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textData" type="Control" parent="debug"]
margin_left = 4.45447
margin_top = 49.8903
margin_right = 44.4545
margin_bottom = 89.8903
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="debug/textData"]
margin_left = 466.252
margin_top = 201.304
margin_right = 568.252
margin_bottom = 248.304
text = "text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="debug/textData"]
margin_left = 583.0
margin_top = 217.0
margin_right = 814.0
margin_bottom = 241.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stateData" type="Control" parent="debug"]
margin_left = -0.89093
margin_top = 97.108
margin_right = 39.1091
margin_bottom = 137.108
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="debug/stateData"]
margin_left = 466.252
margin_top = 201.304
margin_right = 568.252
margin_bottom = 248.304
text = "state"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="CheckButton" parent="debug/stateData"]
margin_left = 654.272
margin_top = 217.0
margin_right = 730.272
margin_bottom = 257.0

[node name="IconData" type="Control" parent="debug"]
margin_left = 5.3454
margin_top = 147.889
margin_right = 45.3454
margin_bottom = 187.889
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="debug/IconData"]
margin_left = 466.252
margin_top = 201.304
margin_right = 568.252
margin_bottom = 248.304
text = "iconAnim"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="debug/IconData"]
margin_left = 583.0
margin_top = 217.0
margin_right = 814.0
margin_bottom = 241.0
placeholder_text = "default"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="debug"]
margin_left = 586.0
margin_top = 411.0
margin_right = 795.0
margin_bottom = 471.0
text = "add"

[node name="Label" type="Label" parent="debug"]
margin_left = 569.877
margin_top = 84.1322
margin_right = 809.877
margin_bottom = 174.132
text = "syntax"
align = 1
valign = 1

[connection signal="pressed" from="Quest_Delete/questHideYes" to="." method="_on_questHideYes_pressed"]
[connection signal="pressed" from="Quest_Delete/questHideNo" to="." method="_on_questHideNo_pressed"]
[connection signal="pressed" from="Quest_Waypoint/questHideYes" to="." method="_on_questHideYes_pressed"]
[connection signal="pressed" from="Quest_Waypoint/questHideNo" to="." method="_on_questHideNo_pressed"]
[connection signal="pressed" from="debug/Button" to="." method="_on_Button_pressed"]
